<resources>
    <string name="app_name">AndroidDevelopment</string>
    <string name="login_as_a_guest">Login as a Guest</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="log_in_here">Log-in here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>