<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logotoptalent"
        android:layout_marginTop="63dp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="61dp">

        <TextView
            android:id="@+id/txtLog"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/log_in_here"
            android:textColor="@color/blueMain"
            android:textFontWeight="800"
            android:textSize="@dimen/font_size_large"
            android:layout_marginVertical="@dimen/margin_small"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/txtLog"
            android:background="@drawable/custom_input"
            android:padding="@dimen/margin_medium"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/txtEmail"
            android:background="@drawable/custom_input"
            android:padding="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/txtForgotPass"
            android:layout_width="match_parent"
            android:layout_below="@+id/txtPassword"
            android:layout_alignParentEnd="true"
            android:layout_height="20dp"
            android:paddingEnd="@dimen/margin_small"
            android:textColor="@color/greyMain"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/forgot_password"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/txtForgotPass"
            android:textColorHint="@color/white"
            android:hint="Login"
            android:layout_marginVertical="@dimen/margin_large"
            android:background="@drawable/custom_button"/>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_below="@+id/btnLogin"
            android:layout_alignParentEnd="true"
            android:layout_height="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtLoginGuest"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_height="28dp"
        android:textColor="@color/blueMain"
        android:textSize="@dimen/font_size_large"
        android:text="@string/login_as_a_guest"/>

</RelativeLayout>